--- a/components/toc/Toc.module.scss
+++ b/components/toc/Toc.module.scss
@@ -1,7 +1,7 @@
 .container {
   width: 300px;
   display: inline-block;
-  height: 1px;
+  height: fit-content;
   max-height: auto;
   position: sticky;
   top: 0;
